--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "html-pdf": "^3.0.1",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongoose": "^5.12.13",
