--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongoose": "^5.12.13",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
 }
