--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "@types/file-saver": "^2.0.2",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.0.0",
+    "jspdf": "^2.3.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.18",
     "tslib": "^2.1.0",
